// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Register User View Entering details 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`The Register User View Rendering when not pending 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`The Register User View Submitting the form Successfully 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        <span
          aria-hidden="true"
          class="spinner-border spinner-border-sm"
          role="status"
        />
        Register
      </button>
      <button
        class="btn btn-link"
        disabled=""
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`The Register User View Submitting the form With an invalid email address 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control is-invalid"
        id="email"
        name="email"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a valid email address
      </div>
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`The Register User View Submitting the form With mismatched passwords 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control is-invalid"
        id="password2"
        name="password2"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Passwords do not match
      </div>
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`The Register User View Submitting the form With padded values 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        <span
          aria-hidden="true"
          class="spinner-border spinner-border-sm"
          role="status"
        />
        Register
      </button>
      <button
        class="btn btn-link"
        disabled=""
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`The Register User View Submitting the form With whitespace only display name 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control is-invalid"
        id="displayName"
        name="displayName"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a display name
      </div>
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`The Register User View Submitting the form With whitespace only email address 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control is-invalid"
        id="email"
        name="email"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter an email address
      </div>
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`The Register User View Submitting the form Without filling anything out 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control is-invalid"
        id="email"
        name="email"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter an email address
      </div>
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control is-invalid"
        id="displayName"
        name="displayName"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a display name
      </div>
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control is-invalid"
        id="password"
        name="password"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a password
      </div>
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control is-invalid"
        id="password2"
        name="password2"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Please re-enter the password
      </div>
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
